Related posts dark mode. Fix post title and meta

--- a/themes/jeo-theme/assets/scss/4-components/_c-article-block.scss
+++ b/themes/jeo-theme/assets/scss/4-components/_c-article-block.scss
@@ -1,4 +1,4 @@
-.dark-theme {
+.dark-theme, .dark-theme.post-template-single-wide {
     // newspack block
     .wp-block-newspack-blocks-homepage-articles, .site-main {
         .article-section-title {
